{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 53,
  "lineage": "3f598431-64df-1ac6-cbb1-67cd577095f5",
  "resources": [
    {
      "module": "module.network-load-balancer",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "tf-nlb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:921505847988:listener/net/tf-network-load-balancer/303bb53ae0e28b97/e790bdc2de4f7a1c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:921505847988:targetgroup/tf-target-group/a3323205003cd386",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:921505847988:listener/net/tf-network-load-balancer/303bb53ae0e28b97/e790bdc2de4f7a1c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:921505847988:loadbalancer/net/tf-network-load-balancer/303bb53ae0e28b97",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-load-balancer.aws_lb.tf-network-load-balancer",
            "module.target-group.aws_alb_target_group.tf-target-group",
            "module.vpc.aws_subnet.tf-public-subnet-1",
            "module.vpc.aws_subnet.tf-public_subnet_2",
            "module.vpc.aws_vpc.tf-fourth-custom-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network-load-balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "tf-network-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:921505847988:loadbalancer/net/tf-network-load-balancer/303bb53ae0e28b97",
            "arn_suffix": "net/tf-network-load-balancer/303bb53ae0e28b97",
            "dns_name": "tf-network-load-balancer-303bb53ae0e28b97.elb.eu-central-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:921505847988:loadbalancer/net/tf-network-load-balancer/303bb53ae0e28b97",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "tf-network-load-balancer",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06aa7818365e29cb8"
              },
              {
                "subnet_id": "subnet-0eb4e6cd3c61b3d5a"
              }
            ],
            "subnets": [
              "subnet-06aa7818365e29cb8",
              "subnet-0eb4e6cd3c61b3d5a"
            ],
            "vpc_id": "vpc-0acd24e342df088e9",
            "zone_id": "Z3F0SRJ5LGBH90"
          },
          "dependencies": [
            "module.vpc.aws_subnet.tf-public-subnet-1",
            "module.vpc.aws_subnet.tf-public_subnet_2",
            "module.vpc.aws_vpc.tf-fourth-custom-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-sg-web_allows_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:921505847988:security-group/sg-01370de988c4e6e22",
            "description": "Allows access to port 8080",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01370de988c4e6e22",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "tf-allows-8080",
            "name_prefix": "",
            "owner_id": "921505847988",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0acd24e342df088e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.tf-fourth-custom-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.target-group",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "tf-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:921505847988:targetgroup/tf-target-group/a3323205003cd386",
            "arn_suffix": "targetgroup/tf-target-group/a3323205003cd386",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "8080",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:921505847988:targetgroup/tf-target-group/a3323205003cd386",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:921505847988:loadbalancer/net/tf-network-load-balancer/303bb53ae0e28b97"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-target-group",
            "port": 8080,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0acd24e342df088e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf-fourth-custom-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:921505847988:internet-gateway/igw-0d6cd4605ffa9ed62",
            "id": "igw-0d6cd4605ffa9ed62",
            "owner_id": "921505847988",
            "tags": {
              "Name": "tf-internet-gateway"
            },
            "tags_all": {
              "Name": "tf-internet-gateway"
            },
            "vpc_id": "vpc-0acd24e342df088e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf-fourth-custom-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:921505847988:route-table/rtb-054fcf56fa55abbcd",
            "id": "rtb-054fcf56fa55abbcd",
            "owner_id": "921505847988",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d6cd4605ffa9ed62",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public route table"
            },
            "tags_all": {
              "Name": "Public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0acd24e342df088e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.tf-internet-gateway",
            "module.vpc.aws_vpc.tf-fourth-custom-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf-route-table-assoc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc64202f37ee6834",
            "route_table_id": "rtb-054fcf56fa55abbcd",
            "subnet_id": "subnet-06aa7818365e29cb8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.tf-internet-gateway",
            "module.vpc.aws_route_table.tf-route-table",
            "module.vpc.aws_subnet.tf-public-subnet-1",
            "module.vpc.aws_vpc.tf-fourth-custom-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf-route-table-assoc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e16a9d4b4bde548e",
            "route_table_id": "rtb-054fcf56fa55abbcd",
            "subnet_id": "subnet-0eb4e6cd3c61b3d5a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.tf-internet-gateway",
            "module.vpc.aws_route_table.tf-route-table",
            "module.vpc.aws_subnet.tf-public_subnet_2",
            "module.vpc.aws_vpc.tf-fourth-custom-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:921505847988:subnet/subnet-06aa7818365e29cb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06aa7818365e29cb8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "921505847988",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tf-public-subnet-1"
            },
            "tags_all": {
              "Name": "Tf-public-subnet-1"
            },
            "vpc_id": "vpc-0acd24e342df088e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf-fourth-custom-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:921505847988:subnet/subnet-0eb4e6cd3c61b3d5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb4e6cd3c61b3d5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "921505847988",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tf-public-subnet-1"
            },
            "tags_all": {
              "Name": "Tf-public-subnet-1"
            },
            "vpc_id": "vpc-0acd24e342df088e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf-fourth-custom-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf-fourth-custom-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:921505847988:vpc/vpc-0acd24e342df088e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0261e94f748781159",
            "default_route_table_id": "rtb-0a461225bc15bbfc9",
            "default_security_group_id": "sg-06f93b7ce958b2073",
            "dhcp_options_id": "dopt-0e0fb281303d70d2a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0acd24e342df088e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a461225bc15bbfc9",
            "owner_id": "921505847988",
            "tags": {
              "Name": "tf-fourth-custom-vpc"
            },
            "tags_all": {
              "Name": "tf-fourth-custom-vpc"
            }
          }
        }
      ]
    }
  ]
}